--- a/src/main/resources/web/login.html
+++ b/src/main/resources/web/login.html
@@ -28,7 +28,7 @@
                         <span class="us_uer"></span>
                         <input name="password" class="text" style="color: #FFFFFF !important; position:absolute; z-index:100;" value="" type="password" placeholder="请输入密码">
                     </div>
-                    <div class="mb2"><a id = "sub" lay-filter="sub" class="act-but submit" href="javascript:;" style="color: #FFFFFF">登录</a></div>
+                    <div class="mb2"><a id = "sub" lay-filter="sub" class="act-but submit" href="javascript:" style="color: #FFFFFF">登录</a></div>
                 </form>
             </div>
         </div>
