--- a/src/main/resources/web/login.html
+++ b/src/main/resources/web/login.html
@@ -42,6 +42,10 @@
             window.location = [[@{/index}]];
         });
 
+        $("#signUp").on("click",function(){
+            window.location = [[@{/signUp}]];
+            });
+
         $(document).ready(function(){
             document.onkeydown = function (event){
                 if (event.keyCode===13) //回车键的键值为13
