--- a/src/main/resources/web/admLogin.html
+++ b/src/main/resources/web/admLogin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>登录</title>
     <link th:href="@{/layui/css/layui.css}" rel="stylesheet"/>
-    <link th:href="@{/css/login.css}" rel="stylesheet"/>
+    <link th:href="@{/css/admLogin.css}" rel="stylesheet"/>
     <script th:src="@{/layui/layui.js}"></script>
     <script type="text/javascript" th:src="@{/jquery/jquery.min.js}"></script>
     <script type="text/javascript" th:src="@{/js/encode64.js}"></script>
@@ -12,23 +12,15 @@
 </head>
 <body>
 <div class="bg">
-    <div>
-        <i id="admPage" class="layui-icon layui-icon-set-fill admin-icon"></i>
-    </div>
-    <div id="signInDiv" class="logo_box">
-        <h3>亿路通汽车</h3>
-        <form action="#" name="f" method="post">
-            <div class="input_outer">
-                <span class="u_user"></span>
-                <input name="username" class="text" type="text" placeholder="请输入用户名">
-            </div>
-            <div class="input_outer">
-                <span class="us_uer"></span>
-                <input name="password" class="text" style="position:absolute; z-index:100;" value="" type="password" placeholder="请输入密码">
-            </div>
-            <div class="mb2"><a id = "sub" lay-filter="sub" class="act-but submit" href="javascript:" style="color: #FFFFFF">登录</a></div>
-            <div class="su"><a id="signUp" href="javascript:" style="color: #ffb800">还不是会员？注册</a></div>
-        </form>
+    <div class="logo_box">
+        <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
+            <legend>亿路通汽车后台管理系统</legend>
+        </fieldset>
+        <input type="text" name="username" required lay-verify="required" placeholder="请输入用户名" autocomplete="off"
+               class="layui-input">
+        <input type="password" name="password" required lay-verify="required" placeholder="请输入密码" autocomplete="off"
+               class="layui-input">
+        <button id="sub" class="layui-btn layui-btn-fluid">登录</button>
     </div>
 </div>
 <script type="text/javascript" th:inline="javascript">
@@ -39,13 +31,6 @@
         $("#sub").on("click",function(){
             login();
         });
-        $("#admPage").on("click",function(){
-            window.location = [[@{/admLogin}]];
-        });
-
-        $("#signUp").on("click",function(){
-            window.location = [[@{/signUp}]];
-            });
 
         $(document).ready(function(){
             document.onkeydown = function (event){
@@ -64,14 +49,14 @@
             password = encode64(password);
             $.ajax({
                 url:[[@{/login}]],
-                data:{"username":username,"password":password, "type":"2"},
+                data:{"username":username,"password":password, "type":"1"},
                 type:"post",
-                dataType:"json",
-                success:function(result){
+                    dataType:"json",
+                    success:function(result){
                     if(result.success){
                         window.location = [[@{/index}]];
-                    }else{
-                        layer.msg(result.msg);
+                        }else{
+                            layer.msg(result.msg);
                         }
                     }
                 })
