--- a/src/main/resources/web/inc.html
+++ b/src/main/resources/web/inc.html
@@ -27,7 +27,7 @@
             <li class="layui-nav-item">
                 <a href="javascript:">
                     <img src="http://t.cn/RCzsdCq" class="layui-nav-img"/>
-                    贤心
+                    <span th:text="${username}"></span>
                 </a>
                 <dl class="layui-nav-child">
                     <dd><a href="">基本资料</a></dd>
@@ -76,6 +76,13 @@
     </div>
 </div>
 <script th:src="@{/layui/layui.js}"></script>
+<script>
+    //JavaScript代码区域
+    layui.use('element', function(){
+        var element = layui.element;
+
+    });
+</script>
 <div th:include="::footer"></div>
 </body>
 </html>
