--- a/src/main/resources/web/index.html
+++ b/src/main/resources/web/index.html
@@ -7,6 +7,7 @@
 <div th:fragment="content">
     <button onclick="test1()">test1</button>
     页面中正文内容：采用th:include + th:replace方式进行页面布局123
+    <p th:text="${username}"></p>
 </div>
 <footer  th:fragment="footer">
     <script type="text/javascript" th:inline="javascript">
