--- a/src/main/resources/web/signUp.html
+++ b/src/main/resources/web/signUp.html
@@ -127,7 +127,7 @@
                 success:function(result){
                 if(result.success){
                     layer.msg("保存成功，请返回登录");
-                    form.reset();
+                    //form.reset();
                     window.location=[[@{/}]]
                 }else{
                         layer.msg(result.msg);
