--- a/src/main/resources/web/inc.html
+++ b/src/main/resources/web/inc.html
@@ -4,11 +4,13 @@
     <meta http-equiv="Content-Type" content="text/html charset=UTF-8" />
     <title>亿路通汽车</title>
     <link th:href="@{/layui/css/layui.css}" rel="stylesheet"/>
+    <script type="text/javascript" th:src="@{/jquery/jquery.min.js}"></script>
+    <script type="text/javascript" th:src="@{/js/encode64.js}"></script>
 </head>
 <body class="layui-layout-body">
 <div class="layui-layout layui-layout-admin">
     <div class="layui-header" th:fragment="header">
-        <div class="layui-logo">layui 后台布局</div>
+        <div class="layui-logo">亿路通汽车</div>
         <!-- 头部区域（可配合layui已有的水平导航） -->
         <ul class="layui-nav layui-layout-left">
             <li class="layui-nav-item"><a href="">控制台</a></li>
@@ -26,15 +28,14 @@
         <ul class="layui-nav layui-layout-right">
             <li class="layui-nav-item">
                 <a href="javascript:">
-                    <img src="http://t.cn/RCzsdCq" class="layui-nav-img"/>
-                    <span th:text="${username}"></span>
+                    <span th:text="${account.name}"></span>
                 </a>
                 <dl class="layui-nav-child">
                     <dd><a href="">基本资料</a></dd>
-                    <dd><a href="">安全设置</a></dd>
+                    <dd><a id="editPass" href="javascript:">安全设置</a></dd>
                 </dl>
             </li>
-            <li class="layui-nav-item"><a href="">退了</a></li>
+            <li class="layui-nav-item"><a th:href="@{/logout}">退出</a></li>
         </ul>
     </div>
 
@@ -76,12 +77,23 @@
     </div>
 </div>
 <script th:src="@{/layui/layui.js}"></script>
-<script>
-    //JavaScript代码区域
-    layui.use('element', function(){
+<script th:inline="javascript" type="text/javascript">
+    /*<![CDATA[*/
+    layui.use(['element','layer'], function(){
         var element = layui.element;
+        var layer = layui.layer;
+        $("#editPass").on("click",function(){
+            editPass();
+        });
+        function editPass(){
+            layer.open({
+                type: 2,
+                content: [[@{/editPass}]] //这里content是一个DOM，注意：最好该元素要存放在body最外层，否则可能被其它的相对元素所影响
+            });
+        }
 
     });
+    /*]]>*/
 </script>
 <div th:include="::footer"></div>
 </body>
