--- a/src/main/resources/web/inc.html
+++ b/src/main/resources/web/inc.html
@@ -88,7 +88,7 @@
         function editPass(){
             layer.open({
                 type: 2,
-                content: [[@{/editPass}]] //这里content是一个DOM，注意：最好该元素要存放在body最外层，否则可能被其它的相对元素所影响
+                content: [[@{/editPass}]]
             });
         }
 
