--- a/src/main/resources/web/passForm.html
+++ b/src/main/resources/web/passForm.html
@@ -1,60 +1,84 @@
-<div id="passForm">
-    <!--<h3 class="box-title">注册新用户</h3>-->
-    <form class="layui-form" action="">
-        <div class="layui-form-item">
-            <label class="layui-form-label">用户名</label>
-            <div class="layui-input-inline">
-                <input type="text" name="username" required lay-verify="username" placeholder="请输入4-12位用户名" autocomplete="off" class="layui-input">
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org" >
+<head>
+    <meta charset="UTF-8">
+    <title></title>
+    <link th:href="@{/layui/css/layui.css}" rel="stylesheet"/>
+    <script th:src="@{/layui/layui.js}"></script>
+    <script type="text/javascript" th:src="@{/jquery/jquery.min.js}"></script>
+    <script type="text/javascript" th:src="@{/js/encode64.js}"></script>
+
+</head>
+<body>
+    <div style="padding: 30px">
+        <form class="layui-form" action="">
+            <div class="layui-form-item">
+                <label class="layui-form-label">旧密码</label>
+                <div class="layui-input-inline">
+                    <input type="password" name="passwordO" required lay-verify="pass" placeholder="请输入6-16位密码" autocomplete="off" class="layui-input">
+                </div>
             </div>
-        </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label">密码</label>
-            <div class="layui-input-inline">
-                <input type="password" name="password" required lay-verify="pass" placeholder="请输入6-16位密码" autocomplete="off" class="layui-input">
+            <div class="layui-form-item">
+                <label class="layui-form-label">新密码</label>
+                <div class="layui-input-inline">
+                    <input type="password" name="passwordN" required lay-verify="pass" placeholder="请输入6-16位密码" autocomplete="off" class="layui-input">
+                </div>
             </div>
-        </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label">确认密码</label>
-            <div class="layui-input-inline">
-                <input type="password" name="passwordV" required lay-verify="pass" placeholder="请再次输入密码" autocomplete="off" class="layui-input">
+            <div class="layui-form-item">
+                <label class="layui-form-label">确认密码</label>
+                <div class="layui-input-inline">
+                    <input type="password" name="password" required lay-verify="pass" placeholder="请再次输入密码" autocomplete="off" class="layui-input">
+                </div>
             </div>
-        </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label">姓名</label>
-            <div class="layui-input-inline">
-                <input type="text" name="name" required lay-verify="required" placeholder="请输入姓名" autocomplete="off" class="layui-input">
-            </div>
-        </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label">性别</label>
-            <div class="layui-input-block">
-                <input type="radio" name="sex" value="1" title="男" checked>
-                <input type="radio" name="sex" value="2" title="女" >
-            </div>
-        </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label">生日</label>
-            <div class="layui-input-inline">
-                <input type="text" name="birthday" id="date" lay-verify="date" placeholder="请选择出生日期" autocomplete="off" class="layui-input">
-            </div>
-        </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label">电话</label>
-            <div class="layui-input-inline">
-                <input type="text" name="phone" required lay-verify="phone" placeholder="请输入联系方式" autocomplete="off" class="layui-input">
-            </div>
-        </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label">邮箱</label>
-            <div class="layui-input-inline">
-                <input type="text" name="mail" required lay-verify="mail" placeholder="请输入邮箱" autocomplete="off" class="layui-input">
-            </div>
-        </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label">地址</label>
-            <div class="layui-input-inline">
-                <input type="text" name="address" placeholder="请输入地址" autocomplete="off" class="layui-input">
-            </div>
-        </div>
-    </form>
-</div>
+            <button style="display:none" id="onSubmit" lay-submit lay-filter="formSubmit">提交</button>
+        </form>
+    </div>
+<script type="text/javascript" th:inline="javascript">
+    /*<![CDATA[*/
+
+    function onSubmit(){
+        $("#onSubmit").click();
+    }
+    layui.use(['form'], function(){
+        var form = layui.form;
+
+        form.verify({
+            pass: [
+                /^[\S]{6,12}$/
+                ,'密码必须6到12位，且不能出现空格'
+            ]
+        });
+
+        form.on('submit(formSubmit)', function(data){
+            if(data.field.password !== data.field.passwordN){
+                layer.msg("两次密码输入不一致");
+                return false;
+            }
+            data.field.passwordN = "";
+            data.field.password = encode64(data.field.password);
+            data.field.passwordO = encode64(data.field.passwordO);
+            $.ajax({
+                url:[[@{user/saveUser}]],
+                data:data.field,
+                type:"post",
+                dataType:"json",
+                success:function(result){
+                if(result.success){
+                    layer.msg("保存成功，请返回登录");
+                    //form.reset();
+                    window.location=[[@{/}]]
+                    }else{
+                        layer.msg(result.msg);
+                    }
+                },
+
+            });
+            return false;
+        });
+
+
+    })
+    /*]]>*/
+</script>
+</body>
+</html>
