--- a/src/main/resources/web/inc.html
+++ b/src/main/resources/web/inc.html
@@ -61,25 +61,35 @@
                         <dd><a href="">超链接</a></dd>
                     </dl>
                 </li>
-                <li class="layui-nav-item"><a href="">云市场</a></li>
-                <li class="layui-nav-item"><a href="">发布商品</a></li>
+                <li class="layui-nav-item"><a th:href="@{/user/query}">用户管理</a></li>
+                <li class="layui-nav-item"><a href="javascript:">发布商品</a></li>
             </ul>
         </div>
     </div>
 
     <div class="layui-body" th:include="::content">
-        <!-- 内容主体区域 -->
         <div style="padding: 15px">内容主体区域</div>
     </div>
 
     <div class="layui-footer">
-        <!-- 底部固定区域 -->
-        © layui.com - 底部固定区域
+        © 唐山学院 - 程兴磊
     </div>
 </div>
 <script th:src="@{/layui/layui.js}"></script>
 <script th:inline="javascript" type="text/javascript">
     /*<![CDATA[*/
+    $(function () {
+        $.ajax({
+            url:"http://soft.svip8.vip/api/Api/getXianhao",
+            data:{"city":"天津"},
+            type:"get",
+            dataType:"jsonp",
+            jsonp: "callback",
+            success:function(result){
+                layer.msg(result.data);
+            }
+    })
+    });
     layui.use(['element','layer'], function(){
         var element = layui.element;
         var layer = layui.layer;
