--- a/src/main/resources/web/passForm.html
+++ b/src/main/resources/web/passForm.html
@@ -12,6 +12,7 @@
 <body>
     <div style="padding: 30px">
         <form class="layui-form" action="">
+            <input type="hidden" name="id" th:value="${account.id}" class="layui-input">
             <div class="layui-form-item">
                 <label class="layui-form-label">旧密码</label>
                 <div class="layui-input-inline">
@@ -50,6 +51,7 @@
         });
 
         form.on('submit(formSubmit)', function(data){
+            var index = layer.load(1);
             if(data.field.password !== data.field.passwordN){
                 layer.msg("两次密码输入不一致");
                 return false;
@@ -58,20 +60,21 @@
             data.field.password = encode64(data.field.password);
             data.field.passwordO = encode64(data.field.passwordO);
             $.ajax({
-                url:[[@{user/saveUser}]],
+                url:[[@{user/update}]],
                 data:data.field,
                 type:"post",
                 dataType:"json",
                 success:function(result){
                 if(result.success){
-                    layer.msg("保存成功，请返回登录");
-                    //form.reset();
-                    window.location=[[@{/}]]
+                    parent.layer.msg("保存成功");
+                    var index_ = parent.layer.getFrameIndex(window.name);
+                    parent.layer.close(index_);
+                    // window.parent.location.replace(location.href)//刷新父级页面
                     }else{
                         layer.msg(result.msg);
                     }
+                layer.close(index);
                 },
-
             });
             return false;
         });
