--- a/src/main/resources/web/user/query.html
+++ b/src/main/resources/web/user/query.html
@@ -17,7 +17,7 @@
         <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
         <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
     </script>
-    <script th:src="@{/layui/layui.js}"></script>
+    <script th:src="@{/js/utils.js}"></script>
     <script type="text/javascript" th:inline="javascript">
         layui.use('table', function(){
             var table = layui.table;
@@ -27,21 +27,26 @@
                 ,url:[[@{/user/getUserTable}]]
                 ,toolbar: '#toolbarDemo'
                 ,title: '用户数据表'
+                ,limit: 10
                 ,cols: [
                     [
                     {type: 'checkbox', fixed: 'left'}
-                    ,{field:'id', title:'ID', width:80, fixed: 'left', unresize: true, sort: true}
-                    ,{field:'username', title:'用户名', width:120, edit: 'text'}
-                    ,{field:'email', title:'邮箱', width:150, edit: 'text', templet: function(res){
-                            return '<em>'+ res.email +'</em>'
+                    ,{field:'username', title:'用户名', width:120,fixed: 'left', edit: 'text'}
+                    ,{field:'name', title:'姓名', width:120, edit: 'text'}
+                    ,{field:'sex', title:'性别', width:80, edit: 'text', templet: function(res){
+                            return '<em>'+ formatSex(res.sex) +'</em>'
                         }}
-                    ,{field:'sex', title:'性别', width:80, edit: 'text', sort: true}
-                    ,{field:'city', title:'城市', width:100}
-                    ,{field:'sign', title:'签名'}
-                    ,{field:'experience', title:'积分', width:80, sort: true}
-                    ,{field:'ip', title:'IP', width:120}
-                    ,{field:'logins', title:'登入次数', width:100, sort: true}
-                    ,{field:'joinTime', title:'加入时间', width:120}
+                    ,{field:'birthday', title:'生日', width:100, templet: function(res){
+                            return '<em>'+ formatDate("yyyy-MM-dd",new Date(res.birthday)) +'</em>'
+                        }}
+                    ,{field:'phone', title:'电话'}
+                    ,{field:'mail', title:'邮箱', width:150, edit: 'text', templet: function(res){
+                        return '<em>'+ res.mail +'</em>'
+                    }}
+                    ,{field:'address', title:'地址', width:80, sort: true}
+                    ,{field:'createTime', title:'加入时间', width:120, templet: function(res){
+                            return '<em>'+ formatDate("yyyy-MM-dd hh:mm:ss",new Date(res.createTime)) +'</em>'
+                        }}
                     ,{fixed: 'right', title:'操作', toolbar: '#barDemo', width:150}
                 ]
             ]
