--- a/src/main/resources/web/signUp.html
+++ b/src/main/resources/web/signUp.html
@@ -126,9 +126,9 @@
                 dataType:"json",
                 success:function(result){
                 if(result.success){
-                    layer.msg("保存成功，请返回登录");
+                    //layer.msg("保存成功，请返回登录");
                     //form.reset();
-                    window.location=[[@{/}]]
+                    //window.location=[[@{/}]]
                 }else{
                         layer.msg(result.msg);
                     }
