--- a/src/main/resources/web/inc.html
+++ b/src/main/resources/web/inc.html
@@ -43,7 +43,7 @@
     <div class="layui-side layui-bg-black">
         <div class="layui-side-scroll">
             <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
-            <ul class="layui-nav layui-nav-tree"  lay-filter="test">
+            <ul class="layui-nav layui-nav-tree" id="leftUl"  lay-filter="test">
                 <li class="layui-nav-item layui-nav-itemed">
                     <a class="" href="javascript:">所有商品</a>
                     <dl class="layui-nav-child">
@@ -61,14 +61,15 @@
                         <dd><a href="">超链接</a></dd>
                     </dl>
                 </li>
-                <li class="layui-nav-item"><a th:href="@{/user/query}">用户管理</a></li>
-                <li class="layui-nav-item"><a href="javascript:">发布商品</a></li>
+                <li class="layui-nav-item"><a th:title="用户管理" th:href="@{/user/query}">用户管理</a></li>
+                <li class="layui-nav-item"><a th:title="车辆管理" th:href="@{/vehilce/query}">车辆管理</a></li>
             </ul>
         </div>
     </div>
 
-    <div class="layui-body" th:include="::content">
-        <div style="padding: 15px">内容主体区域</div>
+    <div class="layui-body" >
+        <div id="titleText" style="padding: 15px"></div>
+        <div th:include="::content"></div>
     </div>
 
     <div class="layui-footer">
@@ -78,18 +79,13 @@
 <script th:src="@{/layui/layui.js}"></script>
 <script th:inline="javascript" type="text/javascript">
     /*<![CDATA[*/
-    $(function () {
-        $.ajax({
-            url:"http://soft.svip8.vip/api/Api/getXianhao",
-            data:{"city":"天津"},
-            type:"get",
-            dataType:"jsonp",
-            jsonp: "callback",
-            success:function(result){
-                layer.msg(result.data);
-            }
-    })
+    $('#leftUl').find('li').each(function () {
+        $(this).click(function () {
+            var objTitle = $(this).children("a").attr('title');
+            $("#titleText").text(objTitle);
+        })
     });
+
     layui.use(['element','layer'], function(){
         var element = layui.element;
         var layer = layui.layer;
