--- a/src/main/resources/web/passForm.html
+++ b/src/main/resources/web/passForm.html
@@ -51,7 +51,7 @@
         });
 
         form.on('submit(formSubmit)', function(data){
-            var index = layer.load(1);
+            var index_ = layer.load(1);
             if(data.field.password !== data.field.passwordN){
                 layer.msg("两次密码输入不一致");
                 return false;
@@ -67,13 +67,13 @@
                 success:function(result){
                 if(result.success){
                     parent.layer.msg("保存成功");
-                    var index_ = parent.layer.getFrameIndex(window.name);
-                    parent.layer.close(index_);
+                    var index = parent.layer.getFrameIndex(window.name);
+                    parent.layer.close(index);
                     // window.parent.location.replace(location.href)//刷新父级页面
                     }else{
                         layer.msg(result.msg);
                     }
-                layer.close(index);
+                layer.close(index_);
                 },
             });
             return false;
