--- a/src/main/resources/web/inc.html
+++ b/src/main/resources/web/inc.html
@@ -62,7 +62,7 @@
                     </dl>
                 </li>
                 <li class="layui-nav-item"><a th:title="用户管理" th:href="@{/user/query}">用户管理</a></li>
-                <li class="layui-nav-item"><a th:title="车辆管理" th:href="@{/vehilce/query}">车辆管理</a></li>
+                <li class="layui-nav-item"><a th:title="车辆管理" th:href="@{/vehicle/query}">车辆管理</a></li>
             </ul>
         </div>
     </div>
