--- a/src/main/resources/web/vehicle/edit.html
+++ b/src/main/resources/web/vehicle/edit.html
@@ -35,7 +35,7 @@
             <div class="layui-form-item">
                 <label class="layui-form-label">座位数</label>
                 <div class="layui-input-inline">
-                    <input type="text" name="seatNum" th:value="${obj.seatNum}" required lay-verify="required" placeholder="请输入姓名" autocomplete="off" class="layui-input">
+                    <input type="text" name="seatNum" th:value="${obj.seatNum}" required lay-verify="seatNum" placeholder="请输入座位数" autocomplete="off" class="layui-input">
                 </div>
             </div>
             <div class="layui-form-item">
@@ -53,20 +53,19 @@
             <div class="layui-form-item">
                 <label class="layui-form-label">首次上牌时间</label>
                 <div class="layui-input-inline">
-                    <input type="text" name="firstLicense" th:value="${#dates.format(obj.firstLicense, 'yyyy-MM-dd')}"  id="date" lay-verify="date" placeholder="请选择首次上牌日期" autocomplete="off" class="layui-input">
+                    <input type="text" name="firstLicense" th:value="${#dates.format(obj.firstLicense, 'yyyy-MM-dd')}"  id="date" lay-verify="date" placeholder="请选择首次上牌日期" autocomplete="off" class="layui-input test-item">
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">租金</label>
                 <div class="layui-input-inline">
-                    <input type="text" name="rent" th:value="${obj.rent}" required lay-verify="phone" placeholder="请输入租金" autocomplete="off" class="layui-input">
+                    <input type="text" name="rent" th:value="${obj.rent}" required lay-verify="rent" placeholder="请输入租金" autocomplete="off" class="layui-input">
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">停用标志</label>
                 <div class="layui-input-block">
-                    <input type="radio" name="isStop" value="1" title="男" th:field="*{obj.isStop}">
-                    <input type="radio" name="isStop" value="2" title="女" th:field="*{obj.isStop}">
+                    <input type="checkbox" name="isStop" checked lay-skin="switch" value="0" lay-text="启用|停用">
                 </div>
             </div>
              <button style="display:none" id="onSubmit" class="layui-btn" lay-submit lay-filter="formSubmit">立即提交</button>
@@ -82,8 +81,13 @@
         var form = layui.form;
         var laydate = layui.laydate;
 
-        laydate.render({
-            elem: '#date'
+        lay('.test-item').each(function(){
+            laydate.render({
+                elem: this
+                ,format:'yyyy-MM-dd'
+                ,type:'date'
+                ,trigger: 'click'
+            });
         });
 
         form.verify({
@@ -91,16 +95,20 @@
                 /^(([京津沪渝冀豫云辽黑湘皖鲁新苏浙赣鄂桂甘晋蒙陕吉闽贵粤青藏川宁琼使领][A-Z](([0-9]{5}[DF])|([DF]([A-HJ-NP-Z0-9])[0-9]{4})))|([京津沪渝冀豫云辽黑湘皖鲁新苏浙赣鄂桂甘晋蒙陕吉闽贵粤青藏川宁琼使领][A-Z][A-HJ-NP-Z0-9]{4}[A-HJ-NP-Z0-9挂学警港澳使领]))$/
                 ,'车牌号码错误'
             ],
-            mail: [
-                /^([A-Za-z0-9_\-\.])+\@([A-Za-z0-9_\-\.])+\.([A-Za-z]{2,4})$/
-                ,'邮箱格式错误'
+            rent: [
+                /(^[1-9]([0-9]+)?(\.[0-9]{1,2})?$)|(^(0){1}$)|(^[0-9]\.[0-9]([0-9])?$)/
+                ,'金额输入错误'
+            ],
+            seatNum: [
+                /^([2-9])$/
+                ,'座位数错误'
             ]
         });
 
         form.on('submit(formSubmit)', function(data){
             var index_ = layer.load(1);
             $.ajax({
-                url:[[@{/user/update}]],
+                url:[[@{/vehicle/save}]],
                 data:data.field,
                 type:"post",
                 dataType:"json",
